<resources>
    <string name="app_name">IMFI Result Calculator</string>
    <string-array name="faculties">
        <item>National Innovation Diploma (NID)</item>
        <item>National Diploma (ND)</item>
    </string-array>
    <string-array name="nid_departments">
        <item>Computer Software Engineering</item>
        <item>Computer Hardware Engineering</item>
    </string-array>
    <string-array name="nd_departments">
        <item>Computer Science</item>
        <item>Accountancy</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="levels_course">
        <item>100 Level</item>
        <item>200 Level</item>
    </string-array>
    <string-array name="semeters">
        <item>First Semester</item>
        <item>Second Semester</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_students_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_lecturer_home">Lecturer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_student">Student</string>
    <string name="register_courses">Register Courses</string>
    <string name="check_result">Check Result</string>
    <string name="profile">Profile</string>
    <string name="create_an_account">Create an Account</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="full_time">Full Time</string>
    <string name="part_time">Part Time</string>
    <string name="department">Department</string>
    <string name="mode">Mode</string>
    <string name="password">Password</string>
    <string name="faculty">Faculty</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="first_name">First Name</string>
    <string name="lecturer_id">Lecturer ID</string>
    <string name="registration_number">Registration Number</string>
    <string name="student">Student</string>
</resources>
